# cimplog

./: .sonar-project.properties  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
src/: CMakeLists.txt  cimplog-generic.c  cimplog-onboarding.c  cimplog-rdk-logger.c  cimplog.c  cimplog.h  main.c
tests/: CMakeLists.txt  cimplog-generic-error.c  onboardingTest.sh  rdk_debug.h  simple-generic.c  simple-rdk-logger-error.c  simple-rdk-logger.c  simple.c
